--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,18 @@
           <artifactId>jetty-maven-plugin</artifactId>
           <version>8.0.0.M1</version>
         </plugin>
+
+	<plugin>
+	  <groupId>org.sonarsource.scanner.maven</groupId>
+	  <artifactId>sonar-maven-plugin</artifactId>
+	  <version>3.0</version>
+	</plugin>
+	<plugin>
+	  <groupId>org.jacoco</groupId>
+	  <artifactId>jacoco-maven-plugin</artifactId>
+	  <version>0.8.6</version>
+	</plugin>
+
       </plugins>
     </pluginManagement>
   </build>
